--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "browser-sync": "2.29.3",
     "browser-sync-webpack-plugin": "2.3.0",
     "cross-env": "7.0.3",
+    "datatables.net-bs4": "^2.0.5",
     "laravel-mix": "6.0.49",
     "lodash": "4.17.21",
     "postcss": "8.4.26",
